# meilisearch-lwt

./: .ocamlformat  LICENCE  LICENSE  README.md  dune-project  index.html  meilisearch-lwt.opam
.github/workflows/: ci.yml  doc.yml
examples/: document_example.ml  dune  example_common.ml  index_example.ml
lib/: dune  meilisearch_client.ml  meilisearch_client.mli  meilisearch_document.ml  meilisearch_document.mli  meilisearch_error.ml  meilisearch_error.mli  meilisearch_index.ml  meilisearch_index.mli  meilisearch_json.ml  meilisearch_lwt.ml  meilisearch_lwt.mli  meilisearch_network.ml  meilisearch_search.ml  meilisearch_search.mli  meilisearch_settings.ml  meilisearch_settings.mli  meilisearch_task.ml  meilisearch_task.mli
meilisearch-lwt/: index.html
meilisearch-lwt/Meilisearch_lwt/: index.html
meilisearch-lwt/Meilisearch_lwt/Document/: index.html
meilisearch-lwt/Meilisearch_lwt/Error/: index.html
meilisearch-lwt/Meilisearch_lwt/Index/: index.html
meilisearch-lwt/Meilisearch_lwt/Search/: index.html
meilisearch-lwt/Meilisearch_lwt/Search/Query/: index.html
meilisearch-lwt/Meilisearch_lwt/Search/Result/: index.html
meilisearch-lwt/Meilisearch_lwt/Settings/: index.html
meilisearch-lwt/Meilisearch_lwt/Settings/Settings/: index.html
meilisearch-lwt/Meilisearch_lwt/Task/: index.html
tests/: builders_tests.ml  dune  integration_tests.ml  serialization_tests.ml
